fix the issue of navbar of self-close on small screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,7 +113,8 @@ body {
 @theme {
   /* custom colors */
   --color-primary: #00FF00;
-  --color-main: #dd261e;
+  /* --color-main: #dd261e; */
+  --color-main: #ff6900;
   --font-Rubik: "Rubik", sans-serif;
   --font-SubHeading: "Montserrat", sans-serif;
   --font-ThirdHeading: "Playwrite VN Guides", cursive;
